reorganized some components

--- a/src/app/vote/vote-info/vote-info.component.html
+++ b/src/app/vote/vote-info/vote-info.component.html
@@ -33,7 +33,7 @@
                 <a routerLink="/archiv">Archiv</a>
             </div>
             <div class="more-link">
-                <a routerLink="/mehr">Mehr</a>
+                <a routerLink="/more">Mehr</a>
             </div>
         </div>
     </div>
