--- a/src/app/more/more/more.component.html
+++ b/src/app/more/more/more.component.html
@@ -1,9 +1,20 @@
-<div>
-    <a routerLink="/archiv">Archiv</a>
-</div>
-<div>
-    <a routerLink="/vote">Umfrage</a>
-</div>
-<div>
-    <a routerLink="/more/draw">Draw</a>
+<div class="container">
+    <a class="link-container">
+        <img src="assets/dokumentation.png">
+        <div class="text">
+            Dokumentation
+        </div>
+    </a>
+    <a class="link-container">
+        <img src="assets/interview.jpg">
+        <div class="text">
+            Interview
+        </div>
+    </a>
+    <a class="link-container">
+        <img src="assets/draw.png">
+        <div class="text">
+            Teste die künstliche Intelligenz
+        </div>
+    </a>
 </div>
