--- a/src/app/more/more/more.component.html
+++ b/src/app/more/more/more.component.html
@@ -14,7 +14,7 @@
     <a class="link-container">
         <img src="assets/draw.png">
         <div class="text">
-            Teste die künstliche Intelligenz
+            Teste die Künstliche Intelligenz
         </div>
     </a>
 </div>
