--- a/src/app/vote/vote-id/vote-id.component.html
+++ b/src/app/vote/vote-id/vote-id.component.html
@@ -10,7 +10,7 @@
             </div>
             <input type="submit" value="senden">
         </form>
-        <a [routerLink]="['']">Zurück</a>
+        <a [routerLink]="['']">Startseite</a>
     </div>
     <div class="side-container right">
         <app-next-button [base_url]="base_url" [last_url]="'/vote/bye'"></app-next-button>
