updated text and added links to interview/pdf

--- a/src/app/archive/view-all/view-all.component.html
+++ b/src/app/archive/view-all/view-all.component.html
@@ -1,21 +1,18 @@
 <div class="body">
     <div class="text-container">
         <div class="title">
-            Die Bilder im Überblick
+            Alle Bilder auf einen Blick
         </div>
         <div class="text">
-            Hier findest du alle 48 Schriftfragmente der Umfrage. Mit Klick auf das jeweilige Bild gelangst du zu den
-            bisher gesammelten Interpretationen der Website-Probanden. Ihnen werden die Interpretation zwei
+            Hier im Archiv findest du alle Bild-Text-Fragmente der Umfrage. Mit Klick auf das jeweilige Bild gelangst du
+            zu den bisher gesammelten Interpretationen der Website-Probanden. Ihnen werden die Interpretation zwei
             verschiedener Arten von maschineller Schriftinterpretation gegenübergestellt. Die «Baseline» Interpretation
             versucht in den Bildfragmenten Buchstaben zu entschlüsseln. Die «Sequenz to Sequenz» Interpretation (kurz:
-            «Seq2Seq») versucht basierend auf die erkannten Buchstaben sinnvolle Worte zu formen.<br>
+            «Seq2Seq») versucht basierend auf die erkannten Buchstaben sinnvolle Worte zu formen.
+            <br><br>
             Im Fokus von «Machine Learning» sind Algorithmen die Daten analysieren, von ihnen lernen und dann
             Voraussagen treffen können. «Deep Learning», ein Teilbereich des «Machine Learning», befasst sich mit
-            neuralen Netzwerken.<br>
-            Die neuronalen Netzwerke sind ein sehr grobes Model davon wie Neuronen funktionieren. Jedes Neuron hat
-            Verbindungen zu anderen Neuronen und leitet Signale weiter. Werden mehrere Schichten von so verbundenen
-            Neuronen aufeinandergelegt spricht man von „Deep Learning“, in unserem Falle «Deep Writing». Diese Schichten
-            lassen sich auf verschiedene Arten kombinieren, um gewünschte Ziele zu erreichen.
+            neuralen Netzwerken.
         </div>
     </div>
     <div class="list">
