--- a/src/app/general/home/home.component.html
+++ b/src/app/general/home/home.component.html
@@ -1,21 +1,24 @@
 <div class="container">
     <div class="text-container">
         <div class="title">
-            Vielen Dank, nimmst du an meinem Bachelorprojekt teil!
+            Spiele gegen künstliche Intelligenz
+            <br>
+            „Ich sehe was, was du nicht siehst“.
         </div>
 
         <div class="text">
-            Im Rahmen des Diplomprojekts des Bachelor Art Education der ZHdK befragen wir Olivia Büchel und Martin
-            Villavicencio den Prozess der Bildbetrachtung. Diese Website zeigt eine Umfrage mit 48 Schriftzeichen, die
-            aus handgeschriebenen Texten entnommen wurden und auf weissem Hintergrund zur Interpretation präsentiert
-            werden.<br>
-            Was siehst du in den Bildern? Kannst du das Geschriebene noch lesen? Oder siehst du bereits abstrakte
-            Objekte, Handlungen oder Menschen? Beschreibe deine Assoziationen im Eingabefeld und nimm so am
-            Bachelorprojekt teil.<br>
-            Im Archiv steht deine und die Bildentschlüsselung anderer Probanden einer Maschine gegenüber. Ein von Martin
-            Villavicencio entwickeltes Deep-Wiritig-Programm kann die Textfragmente basierend auf künstlicher
-            Intelligenz in digitale Schrift umwandeln. Im Vergleich mit der menschlichen Interpretation eröffnet sich
-            Frage: Betreibt die Maschine Bildbetrachtung?
+            Kann eine Maschine Bilder betrachten? Olivia Büchel und Martin Villavicencio gehen dieser Frage auf den
+            Grund. Im Rahmen des Diplomprojekts des Bachelor Art Education der ZHdK entsteht eine Auseinandersetzung mit
+            Bildbetrachtung.
+            <br><br>
+            Diese Website zeigt eine Umfrage mit Bild-Text-Fragmenten, die aus handgeschriebenen Texten entnommen wurden
+            und auf weissem Hintergrund zur Interpretation präsentiert werden. Beschreibe deine Assoziationen im
+            Eingabefeld der Umfrage und werde Teil des Bachelorprojekts.
+            <br><br>
+            Der ETH-Student Martin Villavicencio verwendet ein Deep-Writing-Programm, das handgeschriebene Texte mit
+            Hilfe von künstlicher Intelligenz lesen kann und entwickelt so ein Deep-Reading-Programm zur Interpretation
+            der Text-Bild-Fragmente. Im Archiv steht deine und die Bildentschlüsselung anderer Probanden einer Maschine
+            gegenüber.
         </div>
 
         <div class="link-container text">
