--- a/src/app/more/more/more.component.html
+++ b/src/app/more/more/more.component.html
@@ -1,20 +1,20 @@
 <div class="container">
-    <a class="link-container">
+    <a class="link-container" [href]="bachelorthesis_url">
         <img src="assets/dokumentation.png">
         <div class="text">
-            Dokumentation
+            Dokumentation des Projekts
         </div>
     </a>
-    <a class="link-container">
+    <a class="link-container" [href]="interview_url">
         <img src="assets/interview.jpg">
         <div class="text">
-            Interview
+            Video Interview mit Martin Villavicencio
         </div>
     </a>
     <a class="link-container">
         <img src="assets/draw.png">
         <div class="text">
-            Teste die Künstliche Intelligenz
+            Test: Kann das Deep-Reading-Programm deine Schrift lesen?
         </div>
     </a>
 </div>
