--- a/src/app/more/more/more.component.scss
+++ b/src/app/more/more/more.component.scss
@@ -24,6 +24,7 @@
     color: #0000EE;
 }
 
+
 .link-container img{
     width: 300px;
 }
@@ -33,4 +34,5 @@
     bottom: 0px;
     width: 100%;
     text-align: center;
+    color:black;
 }
