added link to draw

--- a/src/app/more/more/more.component.html
+++ b/src/app/more/more/more.component.html
@@ -11,7 +11,7 @@
             Video Interview mit Martin Villavicencio
         </div>
     </a>
-    <a class="link-container">
+    <a class="link-container" routerLink="/more/draw">
         <img src="assets/draw.png">
         <div class="text">
             Test: Kann das Deep-Reading-Programm deine Schrift lesen?
