--- a/src/app/archive/view-id/view-id.component.html
+++ b/src/app/archive/view-id/view-id.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="side-container left">
         <app-prev-button [base_url]="base_url"></app-prev-button>
+        <app-share-button></app-share-button>
     </div>
     <div *ngIf="picture" class="body">
         <img [src]="picture.url" width="300">
