fixed some stuff

--- a/src/app/archive/view-all/view-all.component.html
+++ b/src/app/archive/view-all/view-all.component.html
@@ -15,6 +15,9 @@
             neuralen Netzwerken.
         </div>
     </div>
+    <div class="homepage">
+        <a routerLink="">Startseite</a>
+    </div>
     <div class="list">
         <div class="img-container" *ngFor="let p of pictures">
             <div class="overlay"></div>
