--- a/src/app/more/draw/draw.component.scss
+++ b/src/app/more/draw/draw.component.scss
@@ -1,3 +1,21 @@
 .outer-wrap{
     position:fixed;
+    width: 600px;
+    left: 50%;
+    margin-left: -300px;
+}
+
+.title {
+    font-size: 28px;
+    margin-top: 30px;
+}
+
+.text {
+    margin-bottom: 10px;
+}
+
+.buttons{
+    max-width: fit-content;
+    max-width: -moz-fit-content;
+    margin: 10px auto 10px auto;
 }
