--- a/src/app/more/draw/draw.component.html
+++ b/src/app/more/draw/draw.component.html
@@ -6,7 +6,7 @@
         Schreibe in das untere Feld und lasse es von einem der Deep-Learning-Modelle analysieren.
     </div>
     <div>
-        <canvas appCanvasDraw [clear]="clear" (newStrokeEvent)="newStroke($event)" id="canvas" width="600" height="300"
+        <canvas appCanvasDraw [clear]="clear" (newStrokeEvent)="newStroke($event)" id="canvas"
             style="border:solid black 1px;">
             Your browser does not support canvas element.
         </canvas>
@@ -29,4 +29,5 @@
             {{elem[0]}}
         </div>
     </div>
+    <div class="test" width="20px" height="600px"></div>
 </div>
