--- a/src/app/more/draw/draw.component.scss
+++ b/src/app/more/draw/draw.component.scss
@@ -1,8 +1,18 @@
 .outer-wrap{
+    /*
     position:fixed;
     width: 600px;
     left: 50%;
     margin-left: -300px;
+    */
+
+    width: 80%;
+    margin:auto;
+}
+
+canvas{
+    width: 100%;
+    height: 200px;
 }
 
 .title {
@@ -22,4 +32,9 @@
 
 .results{
     margin-top: 20px;
+}
+
+.test{
+    width: 20px;
+    height: 600px;
 }
