list gets cleared on resize

--- a/src/app/more/draw/draw.component.html
+++ b/src/app/more/draw/draw.component.html
@@ -6,7 +6,7 @@
         Schreibe in das untere Feld und lasse es von einem der Deep-Learning-Modelle analysieren.
     </div>
     <div>
-        <canvas appCanvasDraw [clear]="clear" (newStrokeEvent)="newStroke($event)" id="canvas"
+        <canvas appCanvasDraw (clear)="clearCanvas()" (newStrokeEvent)="newStroke($event)" id="canvas"
             style="border:solid black 1px;">
             Your browser does not support canvas element.
         </canvas>
