styling of draw and added share button

--- a/src/app/more/more/more.component.html
+++ b/src/app/more/more/more.component.html
@@ -17,4 +17,7 @@
             Test: Kann das Deep-Reading-Programm deine Schrift lesen?
         </div>
     </a>
+    <div class="share-container">
+        <app-share-button></app-share-button>
+    </div>
 </div>
