--- a/src/app/shared/share-button/share-button.component.html
+++ b/src/app/shared/share-button/share-button.component.html
@@ -1,3 +1,3 @@
-<a [href]="current_url" target="_blank">
+<a [href]="current_url" target="_blank" (click)="onClick($event)">
     <mat-icon>share</mat-icon>
 </a>
