Added some stuff to vote-bye

--- a/src/app/vote/vote-bye/vote-bye.component.html
+++ b/src/app/vote/vote-bye/vote-bye.component.html
@@ -1,4 +1,13 @@
-<div>
-Danke für die teilnahme
+<div class="container">
+    <div class="title">
+        Vielen Dank für die Teilnahme
+    </div>
+    <div class="text">
+        Viel Spass beim weiteren entdecken der Webseite.
+    </div>
+    <div class="link-container">
+        <a routerLink="/archiv">Zum Archiv</a>
+        <a routerLink="/">Zur Startseite</a>
+        <a routerLink="/more">Mehr</a>
+    </div>
 </div>
-<a routerLink="/archiv">See the results</a>
