--- a/src/app/more/draw/draw.component.scss
+++ b/src/app/more/draw/draw.component.scss
@@ -1,5 +1,6 @@
 .outer-wrap{
-    width: 80%;
+    width: 70%;
+    max-width: 800px;
     margin:auto;
 }
 
@@ -11,10 +12,12 @@ canvas{
 .title {
     font-size: 28px;
     margin-top: 30px;
+    text-align: center;
 }
 
 .text {
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .buttons{
