--- a/src/app/more/more/more.component.html
+++ b/src/app/more/more/more.component.html
@@ -20,4 +20,7 @@
     <div class="share-container">
         <app-share-button></app-share-button>
     </div>
+    <div class="home-container">
+        <a routerLink="/">Startseite</a>
+    </div>
 </div>
